--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@ User need research should be done in early project stages. This way, your resear
 <h3 id="inform-potential-participants">Inform potential participants</h3>
 <!-- ↑ that could be better, but even my german sentences are not great: …wo sie sind?! -->
 <p>The easy way to get participants is via an recruiting agency: You pay them and they will get you participants. But since that might not be possible for you, here is how you do it yourself. Two conditions need to be satisfied in order to convince people to participate in your research: They need to know about the possibility and that it is rewarding to participate.</p>
-<p>It is motivating for potential participants if the research improves their life: A shopkeeper will likely be interested if you work on making it easier to keep track of bills and taxes, neighbors, if you try to make living in the neighborhood better. People will also be happy to participant, if they like your product and/or organization e.g. because your work is not-for profit and supports a good cause.</p>
-<p>Incentives are a simple, but effective motivation for participants. If you have the funds and particularly, if your project will earn you (or your employer) money, you should pay a fair sum for your participants’ time. If your funds are small and people like to support you and your cause, you could also offer something other than money: Something that people like, but would usually not “just” buy seems to work well—e.g. really good chocolate or a voucher for a nice local restaurant.</p>
+<p>It is motivating for potential participants if the research improves their life: A shopkeeper will likely be interested if you work on making it easier to keep track of bills , neighbors will be motivated to help if you try to make living in the neighborhood better.</p>
+<p>Incentives, like money or vouchers, are a simple, but effective motivation for participants. If you have the funds and particularly, if your project will earn you (or your employer) money, you should pay a fair sum for your participants’ time. If your funds are small and people like to support you and your cause, you could also offer something other than money: Something that people like, but would usually not “just” buy seems to work well—e.g. really good chocolate or a voucher for a nice local restaurant.</p>
 <p>When you know what you can offer to potential participants, you can write down what participants can expect if they participate. This includes:</p>
 <ul>
 <li>What the research will be about</li>
@@ -257,7 +257,7 @@ User need research should be done in early project stages. This way, your resear
 <!-- TODO Rewrite to match Library-Book example-->
 <blockquote>
 <p>Are you a designer?</p>
-<p>The universty library would like to improve the LibApp to support you better in useing our library and digital services. Therefore, we would like to gather some insights into the way you work in the library and with our services. If you would like to support us, someone from our team ask you some questions and look over your shoulder while you work. This would take approximately 1h and take place in the library or some other place where you use our services from. All participants get a $10 voucher for the university’s cafeteria. If you would like to participate (or have further questions) please write an email to jan.dittrich@example.com</p>
+<p>The university library would like to improve the LibApp to support you better in using our library and digital services. Therefore, we would like to gather some insights into the way you work in the library and with our services. If you would like to support us, someone from our team ask you some questions and look over your shoulder while you work. This would take approximately 1h and take place in the library or some other place where you use our services from. All participants get a $10 voucher for the university’s cafeteria. If you would like to participate (or have further questions) please write an email to jan.dittrich@example.com</p>
 </blockquote>
 <p>In some cases, finding participants is easy, because participants are motivated and you can easily reach out to them, as in this example:</p>
 <blockquote>
@@ -269,12 +269,12 @@ User need research should be done in early project stages. This way, your resear
 In parallel, you have also searched the web, and by trying “[next largest city] open data” you found out that the infrastructure department of the city has given an award to the best data project some weeks ago. You could reach out to the staff member who awarded the price. They might be able to refer you to some people who are interested in the topic, since they needed to get in contact with them when advertising the competition for the award.</p>
 </blockquote>
 <p>In the scenario above, I described a step-by-step process of reaching out: In each step, you try to be referred to a next person who is more knowledgeable and familiar with the people you want to do research with. You do this, until you are referred to possible participants.</p>
-<p>At each step, you can learn about how to approach the next: If your friend refers you to a meeting of data hackers, that friend can probably also tell you if you should behave in a particular way if you are going there. For the hacker meeting, it might make sense to NOT be wearing a suit. In other places, the smart clothes might be essential. The more formal and seggregated a setting is, the more important it is to not violate its customs: Hospitals, churches and bureaucracies are tough to research if you don’t behave the “right” way.</p>
-<p>Some people who might help you are in a core position to regulate access to potential participants. The ethnographical jargon for them is “Gatekeepers”. They can decide to help you and let you through the metaphorical “gate” behind which your participants are waiting – or they can hinder your access if they find reasons to not help you. In the example above, a gatekeeper could be the person who runs the “data hackers”-meetup or the city’s digital infrastructure person.</p>
+<p>At each step, you can learn about how to approach the next: If your friend refers you to a meeting of data hackers, that friend can probably also tell you if you should behave in a particular way if you are going there. For the hacker meeting, it might make sense to NOT be wearing a suit. In other places, the smart clothes might be essential.</p>
+<p>Some people who might help you are in a core position to regulate access to potential participants. The ethnographic jargon for them is “Gatekeepers”. They can decide to help you and let you through the metaphorical “gate” behind which your participants are waiting – or they can hinder your access if they find reasons to not help you. In the example above, a gatekeeper could be the person who runs the “data hackers”-meetup or the city’s digital infrastructure person.</p>
 <p>If you have found people who like to be your research participants, you can ask them if they know others who might like to participate. It works like the step-by-step recruiting process, but instead of moving towards your participants, you now can go from one to another by being referred.</p>
 <p>In any case, it is useful to consider different ways to get to your participants. If one way fails (e.g. friends of friends), you may be successful in another (e.g. writing a mail to a “gatekeeper”). In case several approaches work, you get more potential participants. But even more important is that you now have a more diverse set of people, which leads to richer results.</p>
 <h3 id="make-compromises-if-needed">Make compromises, if needed</h3>
-<p>Especially if you are short on money and/or time, you may need to compromise and do research with participants that don’t match your intended users exactly. When doing this, keep in mind to check for similarity of tasks, problems and motivations. These checks don’t ensure that the participants are exactly the ones who may use your final product. But you can be rather sure that they can tell you something which is of interest for you.</p>
+<p>Especially if you are short on money and/or time, you may need to compromise and do research with participants that do not match your intended users exactly. However, if their motivations, activities and problems are similar, you are still likely to learn from these participants. But if they are similar only in demographics or profession rather than in their activities, your can not expect meaningful results.</p>
 <p>If you design an app for people to create bibliographies and you can only get some bachelor’s and master’s students, but no professors, your results will still reveal a lot about the processes of creating bibliographies. The student’s motivation is probably writing final term papers and the professors would like to write journal papers. This is a possible difference — as long as you aware of it, you are probably fine. But if you want to design a skateboard and the only participants you can get are elderly people who enjoy hiking, you are in trouble (if you find elderly people who enjoy skating, go for it).</p>
 <h3 id="a-small-number-of-participants-is-fine">A small number of participants is fine</h3>
 <p>There are no clear cut rules of how many participants are enough. However, most of my projects have between 3 and 8 participants. If I really need to be sure I would do research with 10, but that is about the limit I can manage on my own.</p>
@@ -308,7 +308,7 @@ In parallel, you have also searched the web, and by trying “[next largest city
 <li><em>“Can you show me a piece of work you are proud of?”</em></li>
 </ul>
 <!-- *Questions about Motivations are usually about emotions and goals. Since people act in ways to achieve their motivations, they often their relation to activities as well. You can explore these relations further in follow-up questions—*“You said you hate talking with this client. What in particular makes it a bad experience for you?”*.-->
-<p><strong>Activities</strong> — what does the participant do? How do they do it? What are solutions, procesures, “hacks” do they use? Activities are the core part of reserach: This is what can be observed and where things happen.</p>
+<p><strong>Activities</strong> — what does the participant do? How do they do it? What are solutions, processes, “hacks” do they use? Activities are the core part of research: This is what can be observed and where things happen.</p>
 <ul>
 <li><em>“Can you describe the task you are currently working on?”</em></li>
 <li><em>“Can you show me how you use the application?”</em></li>
@@ -334,7 +334,7 @@ There are other frameworks, like *AEIOU* ^[if you want to know about its origins
 Use a framework like MAP or AEIOU to remind you of the different aspects you can research. This is particularly useful for collecting first experiences but can also help seasoned researchers. -->
 <p>List the topics you want to explore and structure them in a way that is meaningful to you. This list of topics can then be used to create a cheat sheet for the research session.</p>
 <h3 id="write-a-cheat-sheet-to-use-in-the-research-session">Write a cheat sheet to use in the research session</h3>
-<!--What is an interview guide for? Prepare the questions etc. Prepare youself… -->
+<!--What is an interview guide for? Prepare the questions etc. Prepare yourself… -->
 <p>A cheat sheet is a little memory aid that you can take with you when you collect data.</p>
 <p>What goes into such a sheet? The biggest part will be topics you want to explore and the <strong>questions</strong> that you want to ask for this.</p>
 <!-- TODO: Example for a research guide  -->
@@ -1837,76 +1837,87 @@ Before:</p>
 </section>
 </div>
 </div>
-
-<script src="libs/jquery.js"></script>
-<script src="libs/toc_jquery.js"></script>
+<script src = "libs/tocbot.js"> </script>
 <script>
-$(function(){
-	var layoutWrapperSelector = "#layoutWrapper";
-	var textWrapperSelector ="#main";
+	window.onload = function () {
+		var layoutWrapperElement = document.getElementById("layoutWrapper");
+		//create TOC
+		var autotoc = document.createElement("div");
+		autotoc.id = "autoToc";
+		autotoc.classList.add("hidden");
 
-	//create TOC
-	$('<div id="autoToc"></div>').appendTo('#layoutWrapper');
-	$('#TOC').addClass("hidden");
-	$('#autoToc').toc({
-			 'container': textWrapperSelector,
-			 'highlightOffset': 10,
-			 'anchorName': function(i, heading, prefix) { //custom function for anchor name
-				 return prefix+i;
-			 },
-	});
-	//end create TOC
+		layoutWrapperElement.appendChild(autotoc);
 
-	//Toggle TOC visibility
-	$('<a class="toggle">hide TOC</a>').prependTo("#autoToc").click(function(){
-		$("#layoutWrapper").toggleClass("menuactive");
-		if($("#layoutWrapper").hasClass("menuactive")){
-				$("#autoToc .toggle").text("hide TOC");
-		}else{
-				$("#autoToc .toggle").text("show TOC");
-		}
-	});
-	//end Toggle TOC visibility
+		tocbot.init({
+			tocSelector: '#autoToc',
+			contentSelector: '#main',
+			headingSelector: 'h1, h2, h3',
+			ignoreSelector: '.unnumbered',
+		});
 
-	//media query: hide TOC if window is small, show if it is wide
-	var widthChange = function(mediaQuery){
-		if (mediaQuery.matches) {
-			$("#layoutWrapper").addClass("menuactive")
-			$("#autoToc .toggle").text("hide TOC");
+
+		//Toggle TOC visibility
+		var menutoggleElement = document.createElement("a");
+
+
+		menutoggleElement.setAttribute('class', "toggle");
+		menutoggleElement.textContent = "hide table of contents"
+
+		var autotocElement = document.getElementById("autoToc");
+
+		autotocElement.insertBefore(menutoggleElement, autotocElement.firstChild);
+
+		menutoggleElement.addEventListener("click", function (e) {
+			if (layoutWrapperElement.classList.contains("menuactive")) {
+				layoutWrapperElement.classList.remove("menuactive");
+				menutoggleElement.textContent = "show table of contents";
+			} else {
+				layoutWrapperElement.classList.add("menuactive");
+				menutoggleElement.textContent = "hide table of contents"
+			}
+		});
+
+		//media query: hide TOC if window is small, show if it is wide
+		var widthChange = function (mediaQuery) {
+			if (mediaQuery.matches) {
+				layoutWrapperElement.classList.add("menuactive");
+				menutoggleElement.textContent = "hide table of contents";
+			} else {
+				layoutWrapperElement.classList.remove("menuactive");
+				menutoggleElement.textContent = "show table of contents";
+			}
 		}
-		else {
-			$("#layoutWrapper").removeClass("menuactive")
-			$("#autoToc .toggle").text("show TOC");
+
+		if (window.matchMedia) {
+			var mediaQuery = window.matchMedia("(min-width:60rem)");
+			mediaQuery.addListener(widthChange);
+			widthChange(mediaQuery);
 		}
+		//end media query code
+
+
+		var headlines = document.querySelectorAll("h1,h2,h3,h4");
+		Array.prototype.forEach.call(headlines, function (el, i) {
+			var id = el.getAttribute('id');
+
+			if (id) {
+				//setup
+				var classname = "link-to-self";
+				var titletext = "copies link to this headline to the addressbar of your browser";
+				var visibleText = "☚";
+				var hreftext = "#" + id;
+				//create child element
+				var link = document.createElement("a");
+				link.setAttribute('class', classname);
+				link.setAttribute('title', titletext);
+				link.setAttribute('href', hreftext);
+				link.textContent = visibleText;
+
+				el.appendChild(link);
+
+			}
+		});
 	}
-
-	if(window.matchMedia){
-		var mediaQuery = window.matchMedia("(min-width:60rem)");
-		mediaQuery.addListener(widthChange);
-		widthChange(mediaQuery);
-	}
-	//end media query code
-
-	//add a span to each headline, linking to the headline itself, so that we can easily get a link to it
-	$("h1,h2,h3,h4").each(function(i,el){
-		var $el = $(el);
-		var id = $el.attr("id");
-		
-		if(id){
-			$el.append(
-				$("<a>",{
-					"title":"blas",
-					"href":"#"+$el.attr("id"),
-					"text":"☚",
-					"class":"link-to-self",
-					"title":"copies link to this headline to the adressbar of your browser"
-					}
-				)
-			)
-		}
-	})
-
-})
-</script>
+	</script>
 </body>
 </html>
