remove extra what

--- a/index.html
+++ b/index.html
@@ -1618,7 +1618,7 @@ Before:</p>
 <h1 id="communicate-results">Communicate Results</h1>
 <p>If you work with others, the results of your research need to be communicated so they can act upon your research results.</p>
 <p>Aside from getting the results of your research across, communicating your results has some positive side effects: collecting, organizing and summarizing your findings will make it easier for yourself to remember your findings and you may be even able to improve your analysis further.</p>
-<p>This chapter is different that the others. In the chapters before, the focus was on the research itself. But what what works well highly depends on what your audience is familiar with—and this is something that I can’t know. So I could give advice on how to create a <em>persona</em>, but if your colleges base their work mainly on another framework, like <em>Jobs-To-Be-Done</em> the persona would not help.</p>
+<p>This chapter is different that the others. In the chapters before, the focus was on the research itself. But what works well highly depends on what your audience is familiar with—and this is something that I can’t know. So I could give advice on how to create a <em>persona</em>, but if your colleges base their work mainly on another framework, like <em>Jobs-To-Be-Done</em> the persona would not help.</p>
 <p>Because of this, the chapter gives some general advice, shows standard representations (like diagrams and scenarios) and the formats is mentions are conventional (like slidedecks and reports).</p>
 <h2 id="consider-the-audiences-needs">Consider the audiences needs</h2>
 <p>Who will receive the research results and what interests do they have? There may be different stakeholders with different needs, e.g.</p>
