--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
   <meta name="author" content="Jan Dittrich" />
   <title>A Beg­inner’s Guide to Finding User Needs</title>
   <style>
-      code{white-space: pre-wrap;}
-      span.smallcaps{font-variant: small-caps;}
-      span.underline{text-decoration: underline;}
-      div.column{display: inline-block; vertical-align: top; width: 50%;}
+    code{white-space: pre-wrap;}
+    span.smallcaps{font-variant: small-caps;}
+    span.underline{text-decoration: underline;}
+    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+    ul.task-list{list-style: none;}
   </style>
   <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="stylesheet" href="styles/print.css" />
-  <link rel="stylesheet" href="styles/autoToc.css" />
+  <link rel="stylesheet" href="styles/websiteSpecific.css" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
+  
 </head>
 <body>
 <div id="layoutWrapper">
@@ -29,55 +32,67 @@
 </header>
 <nav id="TOC" role="doc-toc">
 <ul>
-<li><a href="#introduction">Introduction</a><ul>
+<li><a href="#introduction">Introduction</a>
+<ul>
 <li><a href="#user-need-research-helps-you-to-create-more-useful-products">User need research helps you to create more useful products</a></li>
 <li><a href="#user-need-research-is-an-iterative-process-not-a-linear-one">User need research is an iterative process, not a linear one</a></li>
 <li><a href="#user-need-research-is-most-useful-before-the-product-is-being-built">User need research is most useful before the product is being built</a></li>
 <li><a href="#our-inquiry-concerns-the-user-not-our-future-product">Our inquiry concerns the user, not our (future) product</a></li>
 </ul></li>
-<li><a href="#prepare-your-research">Prepare your research</a><ul>
+<li><a href="#prepare-your-research">Prepare your research</a>
+<ul>
 <li><a href="#questiontopics">Create a user-focused how-and-why question based on the initial idea for the project</a></li>
-<li><a href="#find-participants">Find participants</a><ul>
+<li><a href="#find-participants">Find participants</a>
+<ul>
 <li><a href="#potential-participants-do-the-activity-that-is-in-your-research-question">Potential participants do the activity that is in your research question</a></li>
 <li><a href="#let-potential-participants-know-about-your-research-and-why-they-should-take-part">Let potential participants know about your research and why they should take part</a></li>
 <li><a href="#make-compromises-if-needed">Make compromises, if needed</a></li>
 <li><a href="#a-small-number-of-participants-is-fine">A small number of participants is fine</a></li>
 </ul></li>
-<li><a href="#prepare-the-research-session">Prepare the research session</a><ul>
+<li><a href="#prepare-the-research-session">Prepare the research session</a>
+<ul>
 <li><a href="#think-of-possible-topics-and-questions-for-your-research">Think of possible topics and questions for your research</a></li>
 <li><a href="#write-a-cheat-sheet-to-use-in-the-research-session">Write a cheat sheet to use in the research session</a></li>
 <li><a href="#take-along-tools-that-help-you-to-record-data-easily">Take along tools that help you to record data easily</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#data-gathering">Data Gathering</a><ul>
-<li><a href="#modes-of-data-gathering">Modes of data gathering</a><ul>
+<li><a href="#data-gathering">Data Gathering</a>
+<ul>
+<li><a href="#modes-of-data-gathering">Modes of data gathering</a>
+<ul>
 <li><a href="#listening-and-asking-questions">Listening and asking questions</a></li>
 <li><a href="#observe">Observe</a></li>
 <li><a href="#co-document-in-diagrams-and-lists">Co-Document in diagrams and lists</a></li>
 </ul></li>
-<li><a href="#start-the-research-session">Start the research session</a><ul>
+<li><a href="#start-the-research-session">Start the research session</a>
+<ul>
 <li><a href="#explain-the-research-project-and-methods">Explain the research project and methods</a></li>
 <li><a href="#start-simple">Start simple</a></li>
 </ul></li>
-<li><a href="#assure-and-encourage">Assure and encourage</a><ul>
+<li><a href="#assure-and-encourage">Assure and encourage</a>
+<ul>
 <li><a href="#affirm-that-you-listen">Affirm that you listen</a></li>
 <li><a href="#make-a-friendly-impression-by-using-body-language.">Make a friendly impression by using body language.</a></li>
 </ul></li>
-<li><a href="#be-open-to-how-the-participant-works-and-thinks">Be open to how the participant works and thinks</a><ul>
+<li><a href="#be-open-to-how-the-participant-works-and-thinks">Be open to how the participant works and thinks</a>
+<ul>
 <li><a href="#ask-open-questions">Ask open questions</a></li>
 <li><a href="#do-not-suggest-right-or-wrong-answers-or-processes">Do not suggest “right” or “wrong” answers or processes</a></li>
 <li><a href="#silence-feels-strange-but-is-okay">Silence feels strange but is okay</a></li>
 </ul></li>
-<li><a href="#take-a-closer-look">Take a closer look</a><ul>
+<li><a href="#take-a-closer-look">Take a closer look</a>
+<ul>
 <li><a href="#probing">Probing</a></li>
 <li><a href="#check-your-understanding">Check your understanding</a></li>
 <li><a href="#ask-for-examples">Ask for examples</a></li>
 </ul></li>
-<li><a href="#steer-the-course-of-research">Steer the course of research</a><ul>
+<li><a href="#steer-the-course-of-research">Steer the course of research</a>
+<ul>
 <li><a href="#switch-topics">Switch topics</a></li>
 <li><a href="#switch-methods">Switch methods</a></li>
 </ul></li>
-<li><a href="#recording-data">Recording data</a><ul>
+<li><a href="#recording-data">Recording data</a>
+<ul>
 <li><a href="#notes">Notes</a></li>
 <li><a href="#audio">Audio</a></li>
 <li><a href="#photos">Photos</a></li>
@@ -85,20 +100,24 @@
 <li><a href="#diagrams">Diagrams</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#review-your-data">Review your data</a><ul>
+<li><a href="#review-your-data">Review your data</a>
+<ul>
 <li><a href="#supplement-data-from-memory">Supplement data from memory</a></li>
 <li><a href="#transcribe-your-notes">Transcribe your notes</a></li>
 <li><a href="#possibly-supplement-from-audio-recordings">Possibly supplement from audio recordings</a></li>
 <li><a href="#AfterSessionArchiveData">Order and archive your data</a></li>
 </ul></li>
-<li><a href="#Analysis">Analysis</a><ul>
+<li><a href="#Analysis">Analysis</a>
+<ul>
 <li><a href="#doing-the-right-analysis">Doing the “right” Analysis</a></li>
-<li><a href="#how-to-make-sense-of-diagrams-and-lists">How to make sense of diagrams and lists</a><ul>
+<li><a href="#how-to-make-sense-of-diagrams-and-lists">How to make sense of diagrams and lists</a>
+<ul>
 <li><a href="#prepare-the-diagrams-for-analysis">Prepare the diagrams for analysis</a></li>
 <li><a href="#commonalities-and-contrasts">Commonalities and contrasts</a></li>
 <li><a href="#summarize">Summarize</a></li>
 </ul></li>
-<li><a href="#making-sense-of-notes">Making sense of notes</a><ul>
+<li><a href="#making-sense-of-notes">Making sense of notes</a>
+<ul>
 <li><a href="#organize-notes-hierarchically">Organize notes hierarchically</a></li>
 <li><a href="#MeaningfulNotes">Create meaningful groups</a></li>
 <li><a href="#prepare-your-notes-for-analysis">Prepare your notes for Analysis</a></li>
@@ -110,47 +129,53 @@
 <li><a href="#wrap-it-up">Wrap it up</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#communicate-results">Communicate Results</a><ul>
+<li><a href="#communicate-results">Communicate Results</a>
+<ul>
 <li><a href="#consider-the-audiences-needs">Consider the audiences needs</a></li>
 <li><a href="#first-things-first">First things first</a></li>
 <li><a href="#dont-make-it-hard-to-understand">Don’t make it hard to understand</a></li>
 <li><a href="#sections-of-a-research-documentation">Sections of a research documentation</a></li>
-<li><a href="#components-of-deliverables-and-reports">Components of deliverables and reports</a><ul>
+<li><a href="#components-of-deliverables-and-reports">Components of deliverables and reports</a>
+<ul>
 <li><a href="#text">Text</a></li>
 <li><a href="#quotes">Quotes</a></li>
 <li><a href="#scenarios">Scenarios</a></li>
 <li><a href="#diagrams-1">Diagrams</a></li>
 <li><a href="#photos-and-illustrations">Photos and Illustrations</a></li>
 </ul></li>
-<li><a href="#typical-documents-for-reporting-results-deliverables">Typical documents for reporting results (“Deliverables”)</a><ul>
+<li><a href="#typical-documents-for-reporting-results-deliverables">Typical documents for reporting results (“Deliverables”)</a>
+<ul>
 <li><a href="#quick-findings">Quick findings</a></li>
 <li><a href="#written-reports">Written Reports</a></li>
 <li><a href="#slides">Slides</a></li>
 <li><a href="#posters">Posters</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#appendix">Appendix</a><ul>
-<li><a href="#learn-even-more">Learn (even) more</a><ul>
+<li><a href="#appendix">Appendix</a>
+<ul>
+<li><a href="#learn-even-more">Learn (even) more</a>
+<ul>
 <li><a href="#books">Books</a></li>
 <li><a href="#examples">Examples</a></li>
 </ul></li>
-<li><a href="#forms-and-templates">Forms and Templates</a><ul>
+<li><a href="#forms-and-templates">Forms and Templates</a>
+<ul>
 <li><a href="#co-documentation-templates">Co-Documentation Templates</a></li>
 <li><a href="#consentForm">Consent and Release Form</a></li>
 </ul></li>
 </ul></li>
 </ul>
 </nav>
-<h4 id="license" class="unnumbered">License</h4>
+<h4 class="unnumbered" id="license" class="unnumbered">License</h4>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/jdittrich" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. Some images may have other licenses (like CC-BY-SA).</p>
-<h4 id="contributors" class="unnumbered">Contributors</h4>
+<h4 class="unnumbered" id="contributors" class="unnumbered">Contributors</h4>
 <ul>
 <li><a href="https://github.com/lisacharlotterost">lisacharlotterost</a></li>
 <li>Claudia Landivar</li>
 </ul>
-<h4 id="resources" class="unnumbered">Resources</h4>
+<h4 class="unnumbered" id="resources" class="unnumbered">Resources</h4>
 <p>Supplemental information, versions for ebook-readers and co-documentation templates can be found at <a href="http://urbook.fordes.de" class="uri">http://urbook.fordes.de</a></p>
-<h4 id="suggestions-and-feedback" class="unnumbered">Suggestions and Feedback</h4>
+<h4 class="unnumbered" id="suggestions-and-feedback" class="unnumbered">Suggestions and Feedback</h4>
 <p>This book is free/libre, if you help to improve it, it helps all other fellow readers.</p>
 <p>To point out mistakes you can:</p>
 <ul>
@@ -215,8 +240,6 @@ Maybe I should connect these paragraphs better
 <p>Sometimes, user need research is also confused with usability testing. In usability testing, you test a product to improve it. Usability testing is not about finding user needs that exists independent of that product.</p>
 <p>Paradoxically, we need to <em>let go</em> of our focus on <em>products</em> to be able to understand the users and to develop products that users need.</p>
 <!-- 
-------------------------------
-    
 
 
 PROBABLY REMOVE; IT IS HARD TO UNDERSTAND THAT THIS BELONGS TO THE MAIN  CHAPTER
@@ -1767,18 +1790,18 @@ Before:</p>
 <h4 id="design-focused">Design focused</h4>
 <p>These books are written for designers and user researchers. The methods and examples are immediately useful for design work.</p>
 <ul>
-<li><strong>Observing the User Experience : A Practitioner’s Guide to User Research</strong> by Goodman, Elizabeth; Kuniavsky, Mike; Moed, Andrea. 2nd Edition. Amsterdam: Elsevier, 2012. ISBN 978-0-123-84870-3 <br> <em>Covers multiple user research methods as well as research planning, recruiting and communicating results. Particularly interesting are the chapters on recruiting and analysis of qualitative data.</em></li>
-<li><strong>Interviewing Users : How to Uncover Compelling Insights</strong> by Portigal, Steve. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978-1-9-33-82-0 <br> <em>As the title suggests, it’s focused on asking questions and listening to answers, but it covers additional methods as well. Includes lots of useful tips.</em></li>
-<li><strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong> by Holtzblatt, Karen; Wendell, Jessamyn Burns; Wood, Shelley. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br> <em>Describes a collection of methods for user research. It is aimed at bigger teams (with time and money, I assume). However, its mentioned here since the idea of grouping data as core activity of data analysis is from it.</em></li>
-<li><strong>Mental Models: Aligning Design Strategy with Human Behavior</strong> by Indi Young. Rosenfeld Media. ISBN-13: 978-1-933-82006-4 <br> <em>Describes a research process with lots of useful methods and structures going from participant group selection up to sharing research based product feature opportunities. A particular focus is on user activities and recruiting based on them.</em></li>
+<li><strong>Observing the User Experience : A Practitioner’s Guide to User Research</strong> by Goodman, Elizabeth; Kuniavsky, Mike; Moed, Andrea. 2nd Edition. Amsterdam: Elsevier, 2012. ISBN 978-0-123-84870-3 <br /> <em>Covers multiple user research methods as well as research planning, recruiting and communicating results. Particularly interesting are the chapters on recruiting and analysis of qualitative data.</em></li>
+<li><strong>Interviewing Users : How to Uncover Compelling Insights</strong> by Portigal, Steve. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978-1-9-33-82-0 <br /> <em>As the title suggests, it’s focused on asking questions and listening to answers, but it covers additional methods as well. Includes lots of useful tips.</em></li>
+<li><strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong> by Holtzblatt, Karen; Wendell, Jessamyn Burns; Wood, Shelley. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br /> <em>Describes a collection of methods for user research. It is aimed at bigger teams (with time and money, I assume). However, its mentioned here since the idea of grouping data as core activity of data analysis is from it.</em></li>
+<li><strong>Mental Models: Aligning Design Strategy with Human Behavior</strong> by Indi Young. Rosenfeld Media. ISBN-13: 978-1-933-82006-4 <br /> <em>Describes a research process with lots of useful methods and structures going from participant group selection up to sharing research based product feature opportunities. A particular focus is on user activities and recruiting based on them.</em></li>
 </ul>
 <h4 id="academic-focus">Academic focus</h4>
 <p>These are books written for academic researchers. Why should you bother with academic books if there are some specifically for designers? Books aimed for an academic audience also cover topics that are easily brushed over. This might be ethics, data analysis and different paradigms for it and the question if there are a “true findings”. All this can be very useful if you find yourself researching sensitive topics, need to come up with custom methods or if you need to explain and defend a particular approach.</p>
 <ul>
-<li><strong>Shane, the Lone Ethnographer: A Beginner’s Guide to Ethnography</strong> by Galman, Sally Campbell. Lanham: Rowman Altamira. ISBN 978-0-759-10344-3 <br> <em>Lots of the methods I described originated in ethnography. This book gives an hands-on and thoughtful introduction to ethnography. Comes as a comic and is fun to read. Minor flaw: The lettering is a bit obscure</em></li>
-<li><strong>The Good, the Bad, and the Data</strong> by Galman, Sally Campbell. Walnut Creek, California: Routledge, 2017. ISBN 978-1598746327 <br> <em>Shane is back and now she focuses on data analysis. Great overview of established paradigms. Like the “Lone Ethnographer” it is a comic and easy to understand. I think the lettering’s readability was improved a bit.</em></li>
-<li><strong>Successful Qualitative Research : A Practical Guide for Beginners</strong> by Clarke, Victoria; Braun, Virginia. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br> <em>This book is aimed at aspiring academic researchers. Hands-on, but covers the underlying (social science) theory as well. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of “Thematic Analysis”)</em></li>
-<li><strong>The Ethnographic Interview</strong> by James P. Spradley. Waveland Press. ISBN-13: 978-1478632078 <br> <em>Focuses on understanding the participants’ language and jargon and consequently less on participants’ activities. Nevertheless a great intro, particularly the annotated examples.</em> <!-- thanks to Jonathan Morgan, Wikimedia, for suggesting this book --></li>
+<li><strong>Shane, the Lone Ethnographer: A Beginner’s Guide to Ethnography</strong> by Galman, Sally Campbell. Lanham: Rowman Altamira. ISBN 978-0-759-10344-3 <br /> <em>Lots of the methods I described originated in ethnography. This book gives an hands-on and thoughtful introduction to ethnography. Comes as a comic and is fun to read. Minor flaw: The lettering is a bit obscure</em></li>
+<li><strong>The Good, the Bad, and the Data</strong> by Galman, Sally Campbell. Walnut Creek, California: Routledge, 2017. ISBN 978-1598746327 <br /> <em>Shane is back and now she focuses on data analysis. Great overview of established paradigms. Like the “Lone Ethnographer” it is a comic and easy to understand. I think the lettering’s readability was improved a bit.</em></li>
+<li><strong>Successful Qualitative Research : A Practical Guide for Beginners</strong> by Clarke, Victoria; Braun, Virginia. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br /> <em>This book is aimed at aspiring academic researchers. Hands-on, but covers the underlying (social science) theory as well. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of “Thematic Analysis”)</em></li>
+<li><strong>The Ethnographic Interview</strong> by James P. Spradley. Waveland Press. ISBN-13: 978-1478632078 <br /> <em>Focuses on understanding the participants’ language and jargon and consequently less on participants’ activities. Nevertheless a great intro, particularly the annotated examples.</em> <!-- thanks to Jonathan Morgan, Wikimedia, for suggesting this book --></li>
 </ul>
 <h3 id="examples">Examples</h3>
 <ul>
